# OOAD_carShareingPlatform

./: .gitignore  Cargo.toml  docker-compose.yml
Document/: .~lock.HW 2. Use Case Model 및 Conceptual Model 구성하기 .odt#  HW 1. Project Kick-Off.md  HW 2. Project Kick-Off.md  HW 2. Use Case Model 및 Conceptual Model 구성하기 .odt
client/: detail.html  index.html  list.html  login.html  reservation-success.html  reservation.html  signup.html
client/admin/: dashboard.html  vehicles.html
client/mypage/: mypage.html  overdue_fee.html  reservations.html
client/mypage/host/: add_car.html  edit_car.html  management.html  reservations.html
client/scripts/: script.js
server/: Cargo.toml
server/src/: auth.rs  background_tasks.rs  lib.rs  main.rs  payment.rs  utils.rs
server/src/models/: car.rs  mod.rs  reservation.rs  user.rs
server/src/repositories/: car_repository.rs  mod.rs  reservation_repository.rs  user_repository.rs
server/src/routes/: cars.rs  mod.rs  pages.rs  reservations.rs  users.rs
