[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_db_pools = { version = "0.2.0" }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.40", features = ["serde"] }
